--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
-    "react-toggle": "^4.1.1"
+    "react-toggle": "^4.1.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
