--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "react-toggle": "^4.1.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
